crates/nash-cli/tests/snapshots/diagnostics__documented_examples_json.snap
---
source: crates/nash-cli/tests/diagnostics.rs
expression: "normalized(serde_json::to_string_pretty(&json).unwrap().as_bytes(), &root)"
---
{
  "errors": [
    {
      "name": "Ledger",
      "path": "<project>/app/src/Ledger.nash",
      "problems": [
        {
          "code": "nash::type::mismatch",
          "labels": [
            {
              "primary": true,
              "region": {
                "end": {
                  "column": 27,
                  "line": 11
                },
                "start": {
                  "column": 5,
                  "line": 11
                }
              },
              "text": "body of `settle`"
            },
            {
              "primary": false,
              "region": {
                "end": {
                  "column": 34,
                  "line": 9
                },
                "start": {
                  "column": 10,
                  "line": 9
                }
              },
              "text": "declared type"
            }
          ],
          "message": [
            "Type mismatch: expected `list ",
            {
              "bold": false,
              "color": "yellow",
              "string": "int",
              "underline": false
            },
            "`, found `list ",
            {
              "bold": false,
              "color": "yellow",
              "string": "Int",
              "underline": false
            },
            "`.\n\nUse `lower` to convert `Int` to `int` where a `Lift` impl is available."
          ],
          "region": {
            "end": {
              "column": 27,
              "line": 11
            },
            "start": {
              "column": 5,
              "line": 11
            }
          },
          "related": [],
          "severity": "error",
          "suggestions": [],
          "title": "TYPE MISMATCH"
        }
      ]
    },
    {
      "name": "Steps",
      "path": "<project>/app/src/Steps.nash",
      "problems": [
        {
          "code": "nash::type::missing_impl",
          "labels": [
            {
              "primary": true,
              "region": {
                "end": {
                  "column": 21,
                  "line": 8
                },
                "start": {
                  "column": 12,
                  "line": 8
                }
              },
              "text": "required by `==`"
            }
          ],
          "message": [
            "No impl for `Eq step`.\n\nAvailable impl heads:\n\n    bool\n    bytes\n    int\n    (list 'a0)\n\n…\n\nImport or define an impl for `Eq step`."
          ],
          "region": {
            "end": {
              "column": 21,
              "line": 8
            },
            "start": {
              "column": 12,
              "line": 8
            }
          },
          "related": [],
          "severity": "error",
          "suggestions": [],
          "title": "MISSING IMPL"
        }
      ]
    },
    {
      "name": "Tag",
      "path": "<project>/app/src/Tag.nash",
      "problems": [
        {
          "code": "nash::pattern::incomplete",
          "labels": [
            {
              "primary": true,
              "region": {
                "end": {
                  "column": 1,
                  "line": 10
                },
                "start": {
                  "column": 5,
                  "line": 7
                }
              },
              "text": ""
            }
          ],
          "message": [
            "Case expression is not exhaustive.\n\nMissing patterns:\n\n    ",
            {
              "bold": false,
              "color": "yellow",
              "string": "Map _",
              "underline": false
            },
            "\n    ",
            {
              "bold": false,
              "color": "yellow",
              "string": "I _",
              "underline": false
            },
            "\n    ",
            {
              "bold": false,
              "color": "yellow",
              "string": "B _",
              "underline": false
            },
            "\n\nAdd the missing branches; use `todo` for unfinished bodies."
          ],
          "region": {
            "end": {
              "column": 1,
              "line": 10
            },
            "start": {
              "column": 5,
              "line": 7
            }
          },
          "related": [],
          "severity": "error",
          "suggestions": [],
          "title": "MISSING PATTERNS"
        }
      ]
    }
  ],
  "type": "compile-errors"
}
