crates/nash-cli/tests/snapshots/diagnostics__documented_examples_terminal.snap
---
source: crates/nash-cli/tests/diagnostics.rs
description: "app/src/Ledger.nash:\n\nmodule Ledger exposing (settle)\nimport Functor exposing (Functor)\n\ntype alias Account = { owner : Bytes, balance : Int }\n\nbalanceOf : Account -> Int\nbalanceOf account = account.balance\n\nsettle : list Account -> list int\nsettle accounts =\n    map balanceOf accounts\n\n\napp/src/Steps.nash:\n\nmodule Steps exposing (isDone)\nimport Prelude exposing ((==))\nimport Eq exposing (Eq)\n\ntype step = Done | Next int\n\nisDone : step -> bool\nisDone s = s == Done\n\n\napp/src/Tag.nash:\n\nmodule Tag exposing (tag)\nimport Builtin exposing (Data(..))\nimport Literal exposing (FromInt)\n\ntag : Data -> int\ntag d =\n    case d of\n        Constr n _ -> n\n        List _ -> 0\n"
---
nash::type::mismatch

  × Type mismatch: expected `list int`, found `list Int`.
    ╭─[app/src/Ledger.nash:11:5]
  8 │ 
  9 │ settle : list Account -> list int
    ·          ────────────┬───────────
    ·                      ╰── declared type
 10 │ settle accounts =
 11 │     map balanceOf accounts
    ·     ───────────┬──────────
    ·                ╰── body of `settle`
    ╰────
  help: Use `lower` to convert `Int` to `int` where a `Lift` impl is available.

nash::type::missing_impl

  × No impl for `Eq step`.
   ╭─[app/src/Steps.nash:8:12]
 7 │ isDone : step -> bool
 8 │ isDone s = s == Done
   ·            ────┬────
   ·                ╰── required by `==`
   ╰────
  help: Available impl heads:

            bool
            bytes
            int
            (list 'a0)

        …

        Import or define an impl for `Eq step`.

nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[app/src/Tag.nash:7:5]
 6 │     tag d =
 7 │ ╭─▶     case d of
 8 │ │           Constr n _ -> n
 9 │ ╰─▶         List _ -> 0
   ╰────
  help: Missing patterns:

            Map _
            I _
            B _

        Add the missing branches; use `todo` for unfinished bodies.

Compilation failed: 24 succeeded, 3 failed or blocked.
