crates/nash-cli/tests/snapshots/diagnostics__poisoned_tuple_terminal.snap
---
source: crates/nash-cli/tests/diagnostics.rs
expression: "normalized(&human.stderr, &project.0)"
---
nash::type::mismatch

  × Type mismatch: expected `( ?, unit )`, found `( ?, 'a -> 'a )`.
   ╭─[<project>/src/Main.nash:3:7]
 1 │ module Main exposing (..)
 2 │ bad : ((), ())
   ·       ────┬───
   ·           ╰── declared type
 3 │ bad = (().field, \x -> x)
   ·       ─────────┬─────────
   ·                ╰── body of `bad`
   ╰────

nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[<project>/src/Main.nash:3:8]
 2 │ bad : ((), ())
 3 │ bad = (().field, \x -> x)
   ·        ────┬───
   ·            ╰── field `field` access
   ╰────

Compilation failed: 0 succeeded, 1 failed or blocked.
