crates/nash-cli/tests/snapshots/diagnostics__type_mismatch_json.snap
---
source: crates/nash-cli/tests/diagnostics.rs
description: "src/Main.nash:\n\nmodule Main exposing (..)\nimport Builtin exposing (type bool(..))\n\nidentity : bool -> unit\nidentity flag = flag\n"
---
{
  "errors": [
    {
      "name": "Main",
      "path": "<project>/src/Main.nash",
      "problems": [
        {
          "code": "nash::type::mismatch",
          "labels": [
            {
              "primary": true,
              "region": {
                "end": {
                  "column": 21,
                  "line": 5
                },
                "start": {
                  "column": 17,
                  "line": 5
                }
              },
              "text": "body of `identity`"
            },
            {
              "primary": false,
              "region": {
                "end": {
                  "column": 24,
                  "line": 4
                },
                "start": {
                  "column": 12,
                  "line": 4
                }
              },
              "text": "declared type"
            }
          ],
          "message": [
            "Type mismatch: expected `",
            {
              "bold": false,
              "color": "yellow",
              "string": "unit",
              "underline": false
            },
            "`, found `",
            {
              "bold": false,
              "color": "yellow",
              "string": "bool",
              "underline": false
            },
            "`.\n\n"
          ],
          "region": {
            "end": {
              "column": 21,
              "line": 5
            },
            "start": {
              "column": 17,
              "line": 5
            }
          },
          "related": [],
          "severity": "error",
          "suggestions": [],
          "title": "TYPE MISMATCH"
        }
      ]
    }
  ],
  "type": "compile-errors"
}
