crates/nash-cli/tests/snapshots/diagnostics__type_mismatch_terminal.snap
---
source: crates/nash-cli/tests/diagnostics.rs
expression: text
---
  × Type mismatch: expected `unit`, found `bool`.
   ╭─[<project>/src/Main.nash:5:17]
 3 │ 
 4 │ identity : bool -> unit
   ·            ──────┬─────
   ·                  ╰── declared type
 5 │ identity flag = flag
   ·                 ──┬─
   ·                   ╰── body of `identity`
   ╰────

Compilation failed: 0 succeeded, 1 failed or blocked.
